- added comments to /etc/cobbler/modules.conf
- during import non-xen kernels will default --virt-type to qemu
- when editing/adding profiles, auto-rebuild the PXE menu
- added http://cobbler.example.org/cblr/svc/op/list/what/systems (or profiles, etc)
- in the webui, only show compatible repos when editing a profile
- refresh cobblerd cache before adding objects

- Wed Jun 03 2008 - 1.0.3
- Fix typo in replicate code
- remove rhpl reference
- scrub references to manage_*_mode and rewrite the restart-services trigger
- add new settings to control whether the restart-trigger restarts things
- yum reposync should also pull i686 kernels, not just i386
- make cobblerd close file handles

- Mon Jun 09 2008 - 1.0.2
- Fix mkdir invocation
- Fix error message output from failed kickstart rendering
- manpage edits
- make buildiso work for SuSE

- Tue Jun 03 2008 - 1.0.1
- Fix misformatted warning in "check"
- Do not have RPM own tftpboot, just generate files in TFTP dir as detected
- Default arches to 'i386' not 'x86' for consistency, esp. in import
- When querying kickstart templates, do not return directories
- Make triggers for add/delete work for renames and copies (same triggers)
- Do not cache snippets so they can be tweaked w/o starting the service
- Make manpage reference /etc/cobbler/settings, not /var/lib
- Added manage_forward_zones/manage_reverse_zones to included config file
- Fix python double-use-of-parameter error

- Mon May 12 2008 - 0.9.2
- run createrepo with less preconditions during cobbler reposync
- doc upgrades and error handling for "cobbler replicate"
- improved error message that occurs when copying from nfs w/ rootsquash
- mac duplication checking improvements for CLI
- add warning to cobbler check if selinux is on and Apache boolean not set
- added warning to cobbler check if templates use the default password
- setting per-system kickstart template to "" or "delete" restores inheritance